cluster/gitops/downloads/nzbhydra2/app/netpol.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: nzbhydra2
specs:
  - description: nzbhydra2
    endpointSelector:
      matchLabels:
        app.kubernetes.io/name: nzbhydra2
        app.kubernetes.io/controller: nzbhydra2
        app.kubernetes.io/instance: nzbhydra2
    egress:
      # To NZBGet
      - toEndpoints:
          - matchLabels:
              io.kubernetes.pod.namespace: downloads
              endpoints.netpols.home.arpa/nzbget-server: "true"
        toPorts:
          - ports:
              - port: "6789"
                protocol: TCP
      # To qBittorrent
      - toEndpoints:
          - matchLabels:
              io.kubernetes.pod.namespace: downloads
              endpoints.netpols.home.arpa/qbittorrent-server: "true"
        toPorts:
          - ports:
              - port: "8080"
                protocol: TCP
      # To Jackett
      - toEndpoints:
          - matchLabels:
              app.kubernetes.io/name: jackett
              app.kubernetes.io/controller: jackett
              app.kubernetes.io/instance: jackett
        toPorts:
          - ports:
              - port: "9117"
                protocol: TCP
      # To external tools
      - toEndpoints:
          - matchLabels:
              endpoints.netpols.home.arpa/nzbhydra2-sync: "true"
            matchExpressions:
              - key: io.kubernetes.pod.namespace
                operator: Exists
        toPorts:
          - ports:
              # Radarr instances port
              - port: "7878"
                protocol: TCP
              # Sonarr instances port
              - port: "8989"
                protocol: TCP
              # Lidarr instances port
              - port: "8686"
                protocol: TCP
              # Readarr instances port
              - port: "8787"
                protocol: TCP
    ingress:
      # Kubelet for healthcheck
      - fromEntities:
          - host
        toPorts: &webservice_ports
          - ports:
              - port: "5076"
                protocol: TCP
      # Kubelet for exporter sidecar healthcheck
      - fromEntities:
          - host
        toPorts: &metrics_ports
          - ports:
              - port: "8080"
                protocol: TCP
      # Metrics
      - fromEndpoints:
          - matchLabels:
              io.kubernetes.pod.namespace: monitoring
              endpoints.netpols.home.arpa/metrics-scraper: "true"
        toPorts: *metrics_ports
      # From search requesters
      - fromEndpoints:
          - matchLabels:
              endpoints.netpols.home.arpa/download-search-requester: "true"
            matchExpressions:
              - key: io.kubernetes.pod.namespace
                operator: Exists
        toPorts: *webservice_ports
      # Gateway to webservice
      - fromEndpoints:
          - matchLabels:
              io.kubernetes.pod.namespace: networking
              app.kubernetes.io/name: ingress-gateways
              gateway.networking.k8s.io/gateway-name: internal-gateway
        toPorts: *webservice_ports
